tracked down issue of my css changes not showing up (that is, base.min.css is being used instead of base.css)

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -136,8 +136,8 @@ tbody tr:nth-child(even) {
 	border-radius: 15px;
 }
 
-.home-ul {
-	list-style-type: none
+#home-ul {
+	list-style-type: none;
 }
 
 a {
